# rpimocap

./: LICENSE  README.md  environment.yml  pyproject.toml
docs/: api.md  autocalib.md  calibration.md  detectors.md  export.md  installation.md  quickstart.md  reconstruction.md
rpimocap/: __init__.py
rpimocap/calibration/: __init__.py  checkerboard.py
rpimocap/calibration/autocalib/: __init__.py  features.py  kruppa.py  report.py
rpimocap/cli/: __init__.py  align.py  autocalib.py  calibrate.py  pipeline.py
rpimocap/detection/: __init__.py  detectors.py
rpimocap/io/: __init__.py  export.py
rpimocap/reconstruction/: __init__.py  align.py  triangulate.py  voxel.py
rpimocap/viewer/: __init__.py
rpimocap/viewer/assets/: index.html
tests/: test_autocalib.py  test_calibration.py  test_reconstruction.py
tools/: arena_aligner.py
